--- a/notes_and_playground.ipynb
+++ b/notes_and_playground.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "To launch interactive shell in Slurm:\n",
     "```\n",
@@ -10,13 +9,12 @@
     "\n",
     "srun -c 4 --gres=gpu:1 --mem=36G --time=1:00:00 --pty bash -i\n",
     "```"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import torch\n",
     "from torchvision import models\n",
@@ -26,48 +24,95 @@
     "for param in model.namedparameters():\n",
     "    print(type(param))\n",
     "    break"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Prepare data\n",
     "\n",
     "This is an artifact of the implementation of the datamodule, the cached file will have synchronization problem when launch multiple training instances. So we prepare the subset once here. \n",
     "TODO: fix the synchronization problem."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from datamodules import cifar100_datamodule\n",
+    "from pathlib import Path\n",
     "\n",
-    "\n",
-    "# target_list = (33, 19, 63, 79, 46, 93, 50, 52, 8, 85)\n",
-    "target_list = (30, 67, 62, 10, 51, 22, 20, 24, 97, 76)\n",
+    "training_labels = (30, 67, 62, 10, 51, 22, 20, 24, 97, 76)\n",
+    "training_labels_2 = (55, 91, 54, 28, 57, 86, 94, 18, 88, 17)\n",
+    "target_list = (33, 19, 63, 79, 46, 93, 50, 52, 8, 85)\n",
     "target_list_2 = (49, 15, 66, 99, 98, 29, 74, 47, 58, 89)\n",
-    "cifar100_dm = cifar100_datamodule(labels=target_list_2)\n",
+    "cifar100_dm = cifar100_datamodule(labels=training_labels_2, data_dir=str(Path.home())+\"/data\")\n",
     "\n",
     "cifar100_dm.prepare_data()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Play with checkpoints"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "from models import DBModel\n",
+    "from pprint import pprint\n",
+    "import pytorch_lightning as pl\n",
+    "from Dropback import Dropback\n",
+    "import torch\n",
+    "from pl_bolts.datamodules import cifar10_datamodule\n",
+    "\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "\n",
+    "\n",
+    "checkpoint_path = \"/data/sunxd/dropback_experiments/checkpoints/dropback_epoch348-val_accuracy0.83-val_loss0.77.ckpt\"\n",
+    "checkpoint = torch.load(checkpoint_path)\n",
+    "\n",
+    "checkpoint['optimizer_states'][0]['param_groups'][0]\n",
+    "\n",
+    "# model = DBModel()\n",
+    "\n",
+    "# # print(checkpoint['state_dict'])\n",
+    "# model.load_state_dict(checkpoint['state_dict'])\n",
+    "# # print(model.parameters())\n",
+    "\n",
+    "# parameters=[]\n",
+    "# for name, param in model.named_parameters():\n",
+    "#     parameters.append(param.data.numpy())\n",
+    "\n",
+    "# parameters\n",
+    "# cifar10_datamodule = cifar10_datamodule.CIFAR10DataModule()\n",
+    "\n",
+    "# model = DBModel()\n",
+    "\n",
+    "# optimizer = Dropback(\n",
+    "#             model.parameters(), \n",
+    "#             lr=0.1, \n",
+    "#             momentum=0.9, \n",
+    "#             weight_decay=4e-5, \n",
+    "#             track_size = 111835, \n",
+    "#             init_decay = 0.1\n",
+    "#         )\n",
+    "\n",
+    "# trainer = pl.Trainer(max_epochs = 0)\n",
+    "\n"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'lr': 0.0012300000000000002,\n",
@@ -7439,61 +7484,15 @@
        "  157]}"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
-   "source": [
-    "from models import DBModel\n",
-    "from pprint import pprint\n",
-    "import pytorch_lightning as pl\n",
-    "from Dropback import Dropback\n",
-    "import torch\n",
-    "from pl_bolts.datamodules import cifar10_datamodule\n",
-    "\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "\n",
-    "\n",
-    "\n",
-    "checkpoint_path = \"/data/sunxd/dropback_experiments/checkpoints/dropback_epoch348-val_accuracy0.83-val_loss0.77.ckpt\"\n",
-    "checkpoint = torch.load(checkpoint_path)\n",
-    "\n",
-    "checkpoint['optimizer_states'][0]['param_groups'][0]\n",
-    "\n",
-    "# model = DBModel()\n",
-    "\n",
-    "# # print(checkpoint['state_dict'])\n",
-    "# model.load_state_dict(checkpoint['state_dict'])\n",
-    "# # print(model.parameters())\n",
-    "\n",
-    "# parameters=[]\n",
-    "# for name, param in model.named_parameters():\n",
-    "#     parameters.append(param.data.numpy())\n",
-    "\n",
-    "# parameters\n",
-    "# cifar10_datamodule = cifar10_datamodule.CIFAR10DataModule()\n",
-    "\n",
-    "# model = DBModel()\n",
-    "\n",
-    "# optimizer = Dropback(\n",
-    "#             model.parameters(), \n",
-    "#             lr=0.1, \n",
-    "#             momentum=0.9, \n",
-    "#             weight_decay=4e-5, \n",
-    "#             track_size = 111835, \n",
-    "#             init_decay = 0.1\n",
-    "#         )\n",
-    "\n",
-    "# trainer = pl.Trainer(max_epochs = 0)\n",
-    "\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import torch\n",
     "from pprint import pprint\n",
@@ -7522,7 +7521,9 @@
     "\n",
     "for name, param in model.named_parameters():\n",
     "    print(name, param)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -7530,9 +7531,8 @@
    "hash": "ad17a8a661171b979a1b31853e7e4ae927f3f1c5ddf0899b29ed0c69a7014cf4"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('env': venv)"
   },
   "language_info": {
    "codemirror_mode": {
